# trdate

./: .gitignore  C-DATE-TIME.csproj  LICENSE  Program.cs  README.md  pyproject.toml
Transform/: 123.py  TransFormDate.py  Transform.py  pyproject.toml
Transform/code/: date_utils.py  main.py  utils.py
Transform/tests/: test_date_utils.py
transform/: __init__.py
transform/code/: date_utils.py  main.py
transform/tests/: test_utils.py
trdate/code/: __init__.py  date_utils.py  main.py  utils.py
trdate/tests/: __init__.py  test_date_utils.py  test_main.py  test_utils.py
