[tool.poetry]
name = "trdate"
version = "1.0.0.1"
description = "A utility library for working with dates and time"
authors = ["Ostrovsky Andrey Yuryevich <miomelliot@gmail.com>"]
license = "MIT"
homepage = "https://github.com/miomelliot/trdate"
repository = "https://github.com/miomelliot/trdate.git"

[tool.poetry.dependencies]
python = "^3.11.4"

[tool.poetry.dev-dependencies]
pytest="^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"